--- a/.gitignore
+++ b/.gitignore
@@ -20,13 +20,13 @@
 .DS_Store
 *.pem
 
+data
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
 
 # vercel
 .vercel
