--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/my-local-db"
+SOLAPI_API_KEY=NCSMXYSW0CY7ENO7
+SOLAPI_API_SECRET=OTS2ZZOADVLIE61VHSRP5JAWUFOYMBR4
+SOLAPI_SENDER_PHONE_NUMBER=01062692363
