--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8443",
     "lint": "next lint"
   },
   "prisma": {
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next/third-parties": "^14.2.15",
     "@prisma/client": "^5.18.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@splidejs/react-splide": "^0.7.12",
@@ -25,7 +27,7 @@
     "date-fns": "^3.6.0",
     "jose": "^5.8.0",
     "lucide-react": "^0.436.0",
-    "next": "14.2.6",
+    "next": "^14.2.15",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
