--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/my-local-db"
+DATABASE_URL="postgresql://postgres:redisPrismaNaver2024@@localhost:5432/my-local-db?schema=public&connection_limit=100&pool_timeout=20"
 SOLAPI_API_KEY=NCSKO0VLQOEXMX8R
 SOLAPI_API_SECRET=Y60ONMK9OSR7ZVBCCRDFVFGNPYQ3UX25
 SOLAPI_SENDER_PHONE_NUMBER=01077959865
